# comm_route_new

./: .plan.md  CMakeLists.txt  brainstorming-zh.md
.claude/: plan.md
.claude/skills/sp-adversarial-review/: SKILL.md
.claude/skills/sp-brainstorming/: SKILL.md
.claude/skills/sp-debugging/: SKILL.md
.claude/skills/sp-dispatching-agents/: SKILL.md
.claude/skills/sp-executing-plans/: SKILL.md
.claude/skills/sp-finishing/: SKILL.md
.claude/skills/sp-git-worktrees/: SKILL.md
.claude/skills/sp-optimization/: SKILL.md
.claude/skills/sp-review/: SKILL.md
.claude/skills/sp-testing/: SKILL.md
.claude/skills/sp-using-skills/: SKILL.md
.claude/skills/sp-writing-plans/: SKILL.md
docs/: FRAME_FORMAT_ANALYSIS.md  FRAME_FORMAT_QUICKREF.txt  README_FRAME_FORMAT.md  integration-thread-safety.md
docs/plans/: 2026-05-29-agent-cli.md  2026-06-08-tp-route.md  2026-06-17-frame-len-field.md  deep-copy-bcast-queue.md
docs/specs/: 2026-05-28-agent-cli-design.md  2026-05-28-agent-cli.feature  2026-05-29-agent-cli-design.md  2026-06-08-tp-route-design.md  2026-06-08-tp-route.feature  2026-06-17-frame-len-field-design.md  2026-06-17-frame-len-field.feature
docs/specs/features/: agent-cli.feature
examples/: sim_demo.c
src/: comm_route.c  comm_route.h
tests/: test_ack.c  test_broadcast.c  test_coverage.c  test_extra.c  test_instance.c  test_len_field.c  test_main.c  test_multihop.c  test_recv.c  test_send.c
tests/manual/: test_2048.c  test_2048x10.c  test_bcast_seq_gap.c  test_frame_loss.c  test_ota.c
